This file only list changes to game code.  Changes to content can be found here:

http://onehouronelife.com/updateLog.php



Version 427   ???

--Apocalypse jumps everyone back to (0,0).  Part of #1069





Version 425   2024-May-10

--PLANET settings page now allows you to specify your PayPal email address,
  which will be used for delivering your revshare for content you contribute
  to AHAP.

--ahapTechTreeURL changed to ahap.info    Fixes #1065

--Ctrl-c in-game now copies recent speech log, from past 30 seconds, to system
  clipboard.  This will help non-English-speaking users who are trying to paste
  speech into translation services.  Fixes #1029

--Added a lot more logging around required version numbers when PLEASE UPGRADE
  error pages are shown.

--Fixed so that Object Editor doesn't allow baking of non-90 rotated sprites
  (which were being rounded, by surprise, to closest 90-degree rotation).
  It now shows a message explaining why the bake cannot occur.  Fixes #1070

--Slider for simulating uses in Object Editor now works the same way as slider
  in Scene editor.  Fixes #1073

--Fixed bug that was causing author= line in transition files to get
  interpreted as comment if transition had no comment, resulting in
  duplication of author= line when transition was saved again.  Fixes #1071

--When using import_replace folder, if an object ID doesn't exist, the next
  object ID is used instead of inflating the local object ID space by
  force-inserting an ID.  Fixes #1072

--Fixed glitch in rolling back object ID and sprite ID when deleting last item
  in bank (to prevent ID inflation).





Server Fixes:

--Fixed typo in protocol.txt for server.  Fixes #1066  Thanks 4ferrocyanide  

--ahapGate now has show_vote_stats call.  Part of #1064

--Life Log stats (public data) now include status=N for normal player or
  status=D for d-town player.  Fixes #1041

--Fixed major bug when maxFlightDistanced.ini is 0 (current setting), which was